
General:
 - LTO is now enabled for Intel/clang compilers.
 - LTO behavior on GCC can be parameterized using LTO_EXTRA_FLAG in cmake.
   Setting it to "auto" will use all available cores, while setting it to n will
   use n cores to speedup link step (usage: cmake -DLTO_EXTRA_FLAG=4).

C interface:
 - Many MSG tests were converted to the new S4U's interface in C, that
   was extended for that.

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#41: Add sg_actor_create C interface
 - FG#43: xbt::random needs some care
 - FG#48: The Impossible Did Happen (yet again)
 - FG!24: Documentation and fix for xbt/random
 - FG!35: Add a modeling hint for parallel links in doc
 - GF#18137: Allow different stack sizes?
 - GH#128: Parallelization of simulation with --cfg=contexts/nthreads
 - GH#139: Allow pthread creation in SMPI
 - GH#336: Packet-level simulation using SMPI?
 - GH!337: Fix link_energy plugin for wifi platforms
 - GH!339: Add Mailbox set_receiver method to python binding

----------------------------------------------------------------------------

SimGrid (3.25) February 2. 2020 (aka 02 02 2020)

The Palindrom Day Release.

Important user-visible changes:
 - Improve the Python usability (stability and documentation).
   - A nasty synchronization bug was ironed out, see also below.
   - Python's doc was organized as a separate tree, now integrated with C++.
   - C bindings of S4U were not part of the doc.
   - The C++ doc was also improved as methods are now split by theme.
 - Further deprecate MSG: you now have to pass -Denable_msg=ON to cmake.
   - This is mandatory to use the Java bindings.
   - OFF by default; The plan is to completely remove MSG by 2020Q4 or 2021Q1.
 - SimDAG++: Automatic dependencies on S4U activities (experimental)
   - Some features are already implemented but not all of them
   - Cannot block an activity until it's scheduled on a resource